adding slider to companies stories

--- a/week3/adyen-clone/index.html
+++ b/week3/adyen-clone/index.html
@@ -316,26 +316,33 @@
                         Watch Video Now</a>                    
                 </div>
             </div>
-            <div class="companies-features">
-                <div class="companies-features-item">
-                    <img src="assets/hompage-16x9-brompton.jpg" alt="Brompton bikes">
-                    <h5>BROMPTON</h5>
-                    <h4>Making tracks with global payments</h4>
-                    <a href="#" class="link-green">Read Customer Story <i class="fas fa-angle-right"></i></a>
+            <div class="sm-slider">
+                <div class="sm-slider-nav">
+                    <span class="sm-slider-btn"></span>
+                    <span class="sm-slider-btn"></span>
+                    <span class="sm-slider-btn"></span>                
                 </div>
-                <div class="companies-features-item">
-                    <img src="assets/hompage-16x9-flixbus.jpg" alt="Flixbus">
-                    <h5>FLIXBUS</h5>
-                    <h4>The road to global expansion</h4>
-                    <a href="#" class="link-green">Read Customer Story <i class="fas fa-angle-right"></i></a>
+                <div class="companies-features">
+                    <div class="companies-features-item companies-features-item-left">
+                        <img src="assets/hompage-16x9-brompton.jpg" alt="Brompton bikes">
+                        <h5>BROMPTON</h5>
+                        <h4>Making tracks with global payments</h4>
+                        <a href="#" class="link-green">Read Customer Story <i class="fas fa-angle-right"></i></a>
+                    </div>
+                    <div class="companies-features-item">
+                        <img src="assets/hompage-16x9-flixbus.jpg" alt="Flixbus">
+                        <h5>FLIXBUS</h5>
+                        <h4>The road to global expansion</h4>
+                        <a href="#" class="link-green">Read Customer Story <i class="fas fa-angle-right"></i></a>
+                    </div>
+                    <div class="companies-features-item companies-features-item-right">
+                        <img src="assets/hompage-16x9-transferwise.jpg" alt="Glass Transferwise office building">
+                        <h5>TRANSFERWISE</h5>
+                        <h4>4 questions with Wade Stokes</h4>
+                        <a href="#" class="link-green">Read Customer Story <i class="fas fa-angle-right"></i></a>
+                    </div>
                 </div>
-                <div class="companies-features-item">
-                    <img src="assets/hompage-16x9-transferwise.jpg" alt="Glass Transferwise office building">
-                    <h5>TRANSFERWISE</h5>
-                    <h4>4 questions with Wade Stokes</h4>
-                    <a href="#" class="link-green">Read Customer Story <i class="fas fa-angle-right"></i></a>
-                </div>
-            </div>
+            </div>        
         </section>
         <section class="account">
             <h3>Start your journey with Adyen today</h3>
