updated mobile touch move to be more flexible

--- a/week3/adyen-clone/index.html
+++ b/week3/adyen-clone/index.html
@@ -323,19 +323,19 @@
                     <span class="sm-slider-btn"></span>                
                 </div>
                 <div class="companies-features">
-                    <div class="companies-features-item companies-features-item-left" ontouchmove="slide(0)">
+                    <div class="companies-features-item companies-features-item-left">
                         <img src="assets/hompage-16x9-brompton.jpg" alt="Brompton bikes">
                         <h5>BROMPTON</h5>
                         <h4>Making tracks with global payments</h4>
                         <a href="#" class="link-green">Read Customer Story <i class="fas fa-angle-right"></i></a>
                     </div>
-                    <div class="companies-features-item" ontouchmove="slide(1)">
+                    <div class="companies-features-item">
                         <img src="assets/hompage-16x9-flixbus.jpg" alt="Flixbus">
                         <h5>FLIXBUS</h5>
                         <h4>The road to global expansion</h4>
                         <a href="#" class="link-green">Read Customer Story <i class="fas fa-angle-right"></i></a>
                     </div>
-                    <div class="companies-features-item companies-features-item-right" ontouchmove="slide(2)">
+                    <div class="companies-features-item companies-features-item-right">
                         <img src="assets/hompage-16x9-transferwise.jpg" alt="Glass Transferwise office building">
                         <h5>TRANSFERWISE</h5>
                         <h4>4 questions with Wade Stokes</h4>
