added requested changes

--- a/week1/digital_resume_responsive/index.html
+++ b/week1/digital_resume_responsive/index.html
@@ -30,12 +30,12 @@
                     <h1>Contact Me</h1>
                     <form class="back-content-form">
                         <label for="full-name">Name :</label>
-                        <input id="full-name" type="text" placeholder="Full Name" autocomplete="disabled">
+                        <input id="full-name" type="text" placeholder="Full Name" />
                         <label for="email">E-mail :</label>
-                        <input id="email" type="text" placeholder="Example@mail.com" autocomplete="disabled">
+                        <input id="email" type="text" placeholder="Example@mail.com" />
                         <label for="details">Details :</label>
-                        <textarea id="details" placeholder="The message here." autocomplete="disabled"></textarea>
-                        <input type="submit" value="Submit">
+                        <textarea id="details" placeholder="The message here."></textarea>
+                        <input type="submit" value="Submit"class="submit_btn">
                     </form>
                 </div>
             </section>
